Added plots and updated ui

--- a/App/templates/Base.html
+++ b/App/templates/Base.html
@@ -93,6 +93,7 @@
 				<li class="nav-item"><a class="nav-link" href={{url_for('ROLFBP.rolf')}}>ROLF</a></li>
 				<li class="nav-item"><a class="nav-link" href={{url_for('PlayersBP.players')}}>Players</a></li>
 				<li class="nav-item"><a class="nav-link" href={{url_for('main.RiotAPI')}}>RiotAPI</a></li>
+				<li class="nav-item"><a class="nav-link" href={{url_for('Plot.plot_png')}}>plot_png</a></li>
 				<li class="nav-item nav=link disabled text-muted" href = "#">
 					<span>Welcome, me</span>
 				</li>
